bynkc/tests/fixtures/negative/17_if_branch_type_mismatch/input.bynk
commons test {
  fn mixed(b: Bool) -> Int {
    if b {
      1
    } else {
      "no"
    }
  }
}
